logic/src/parse/snapshots/logic__parse__ui__non_alphabetic_ident.snap
---
source: logic/src/parse/ui.rs
expression: string

---
error: Your program contains a syntax error!
  ┌─ file:1:2
  │
1 │ 0x = 15
  │  ^ Expected an operator here. Instead we found `x`.


